fix: -fix a bug that caused the 'next section' button to overlap in the hero section.

--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -44,7 +44,7 @@
   display: none;
 }
 
-@media (min-width: 50em) {
+@media (min-width: 50em) and (min-height: 50em) {
   .hero-section__next-section-button {
     display: flex;
     justify-content: center;
