--- a/styles/style.css
+++ b/styles/style.css
@@ -333,7 +333,7 @@ h2 {
   display: none;
 }
 
-@media (min-width: 50em) {
+@media (min-width: 50em) and (min-height: 50em) {
   .hero-section__next-section-button {
     display: flex;
     justify-content: center;
